<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp"
    android:background="@color/oxfordBlue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@color/brownSugar"
        android:gravity="bottom|end"
        android:textColor="@color/white"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnNum7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_7"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnNum8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_8"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnNum9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_9"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnAddition"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/atomicTangerine"
            android:text="@string/addition"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnNum4"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_4"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnNum5"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_5"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnNum6"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_6"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/atomicTangerine"
            android:text="@string/subtract"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNum1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnNum2"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnNum3"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_3"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/atomicTangerine"
            android:text="@string/multiply"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNum0"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/gamboge"
            android:text="@string/_0"
            android:textSize="25sp" />
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:onClick="onDecimalPoint"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/cadetGray"
            android:text="@string/Dot"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="25sp" />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/atomicTangerine"
            android:text="@string/divide"
            android:layout_weight="1"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:onClick="onClear"
            android:backgroundTint="@color/cadetGray"
            android:text="@string/clr"
            android:layout_weight="1"
            android:textSize="30sp" />
        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:onClick="onEqual"
            android:backgroundTint="@color/atomicTangerine"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textSize="30sp"/>
    </LinearLayout>




    </LinearLayout>
